...
            ],
          ),
          _Section(
            title: 'Paywalls',
            children: [
              _ActionButton(
                buttonKey: const ValueKey('present_upsell'),
                label: 'Present upsell',
                onPressed: () async {
                  await _heliumFlutterPlugin.presentUpsell(
                    trigger: _trigger,
                    context: context,
                    onEntitled: () {
...
                      debugPrint('[Helium] onPaywallUnavailable');
                    },
                  );
                },
              ),
              _ActionButton(
                buttonKey: const ValueKey('view_for_trigger'),
                label: 'Open View for Trigger',
                onPressed: () {
                  Navigator.of(context).push(
                    MaterialPageRoute(
                      builder: (_) => const ViewForTriggerPage(),
                    ),
...
