...

//Native view type
const String upsellViewForTrigger = 'upsellViewForTrigger';

//Channel name
const String heliumFlutter = 'helium_flutter';
const String downloadStatusChannelName = "com.tryhelium.paywall/download_status";

//Method names
const String initializeMethodName = 'initialize';
const String makePurchaseMethodName = 'makePurchase';
const String restorePurchasesMethodName = 'restorePurchases';
const String onPaywallEventMethodName = 'onPaywallEvent';
...
